# CppCRUDify

./: CMakeLists.txt  LICENSE  README.md
src/: .envexample  database.cpp  database.h  main.cpp  routes.cpp  routes.h
